# swagger/swagger.yml
@@ -1,14 +1,5 @@
 swagger: "2.0"
-info:
-  title: beego Test API
-  description: beego has a very cool tools to autogenerate documents for your API
-  version: 1.0.0
-  termsOfService: http://beego.me/
-  contact:
-    email: astaxie@gmail.com
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
+info: {}
 basePath: /v1
 paths:
   /authentication/:
@@ -331,6 +322,8 @@ definitions:
     type: object
     properties:
       Address:
+        type: string
+      MerchantCode:
         type: string
       Name:
         type: string
